# bdx

./: CMakeLists.txt  config.json
examples/: CMakeLists.txt  futures.cpp  logging.cpp  receiver.cpp  scheduler.cpp
include/common/: engine.hpp  json.hpp  log.hpp  make_unique.hpp  pointer_cast.hpp
include/common/dataformat/: f_dataformat.hpp  s_dataformat.hpp
include/common/transport/: buffer.hpp  endpoint.hpp  exception.hpp  stream_recv_client.hpp
include/ru/: dataframes_manager.hpp  ru_args.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  log.cpp
src/common/transport/: stream_recv_client.cpp
src/ru/: CMakeLists.txt  dataframes_manager.cpp  main.cpp
tests/: CMakeLists.txt  t_json.cpp  t_pointer_cast.cpp
